# maya-archaeology

./: .gitignore  README.md
backpack/: README.md
cloud-error-scripts/: README.md  compute_cloud_error.cpp  rmse_curve.py
go-icp-script/: CMakeLists.txt  pcd_normalize.cpp  pcd_transform.cpp
go-icp-script/models/rtabmap-17-5/: centroid.txt  lidar.ply  mat.txt
go-icp-script/models/rtabmap-17-6/: centroid.txt  mat.txt
go-icp-script/scripts/: .go-icp.py.swp  error.py  go-icp.py
old_experiments/: README.md
old_experiments/cloud-error-scripts/: CMakeLists.txt
old_experiments/go-icp-script/scripts/: go-icp.py
old_experiments/orbslam_reconstruction/: generate_pointclouds.sh  run.py
old_experiments/orbslam_reconstruction/downsample/: CMakeLists.txt
old_experiments/super4pcs-script/general/: get_pcl_error.sh  pcl_convert.sh
old_experiments/super4pcs-script/registration/: s4p-register.sh
old_experiments/super4pcs-script/testModels/: hippo2.ply  hippo2.vtk
orbslam_reconstruction/: .gitignore  CMakeLists.txt  README.txt  colorize.cpp  generate_traj.py  match.py  process.py  process_poses.py  run.py  select_depth_image.sh  transform_concat.cpp
orbslam_reconstruction/apply_trans_matrix/src/: matrix_transform.cpp
orbslam_reconstruction/color/src/: CMakeLists.txt
orbslam_reconstruction/danbing_old_version/: generate_pointcloud_kinect1.py  get_time_stamp_and_depth_images.py
orbslam_reconstruction/danbing_old_version/apply_trans_matrix/: CMakeLists.txt
orbslam_reconstruction/danbing_old_version/apply_trans_matrix/src/: matrix_transform.cpp
orbslam_reconstruction/downsample/: CMakeLists.txt
orbslam_reconstruction/downsample/src/: downsample.cpp  voxel_grid.cpp
orbslam_reconstruction/new_script/: CMakeLists.txt  compile.sh  modify_trajectory.py  modify_trajectory_tum.py  process.py  transform_concat.cpp
ros_launch_files/cartographer_ws/: start_cartographer.sh
ros_launch_files/kinectv2/002712263847/: calib_color.yaml
ros_launch_files/maplab/: imu-zr300-maplab.yaml  imu-zr300-rovio.yaml  ncamera.yaml  run.sh
ros_launch_files/orbslam/: 002712263847.yaml  sr300.yaml  zr300_1.yaml
ros_launch_files/orbslam/launch/: kinect_orbslam2.launch  kinectv1_2017-06-12-08-42-36.bag  kinectv2_orbslam2.launch  orbslam_kinectv2.sh  orbslam_realsense.sh  orbslam_realsense_sr300.sh  realsense_orbslam2.launch  (+1 more)
ros_launch_files/rgbdslam/: rgbdslam_kinectv2.launch  rgbdslam_kinectv2.sh  rgbdslam_realsense.launch  rgbdslam_realsense_sr300.sh  sr300_nodelet_rgbd.xml
ros_launch_files/rtabmap/: kinectv1_2017-06-11-10-41-42.bag  kinectv1_2017-06-12-08-15-28.bag  kinectv2_2017-06-11-13-57-06.bag  rtabmap_kinectv1.launch  rtabmap_kinectv1.sh  rtabmap_kinectv2.launch  rtabmap_kinectv2.sh  rtabmap_realsense.launch  rtabmap_realsense.sh  rtabmap_realsense_sr300.sh  viewer.launch
slam_scripts/: setup_vnc.sh
slam_scripts/cartographer_ws/: replay_cartographer.sh  rs_rosbag.launch  save_cartographer.sh  start_cartographer_kinectv1.sh  start_cartographer_kinectv2.sh
slam_scripts/desktop/: Cartographer_Kinectv2_START.desktop  Cartographer_START.desktop  Cartographer_STOP.desktop  EF_Kinect_v1.desktop  EF_Kinect_v2.desktop  EF_RealSense.desktop  EF_RealSense_LongRange.desktop  InfiniTAM_Kinectv1.desktop  InfiniTAM_Kinectv2.desktop  InfiniTAM_RealSense.desktop  InfiniTAM_RealSense2.desktop  InfiniTAM_RealSenseSlam.desktop  InfiniTAM_RealSense_SR300.desktop  InfiniTAM_Two_Kinects.desktop  MAPLAB_Realsense.desktop  ORBSLAM_Kinectv1.desktop  ORBSLAM_Kinectv2.desktop  ORBSLAM_RealSense.desktop  ORBSLAM_RealSense2.desktop  ORBSLAM_RealSense2_v2.desktop  ORBSLAM_RealSense_SR300.desktop  RGBDSLAM_Kinectv1.desktop  RGBDSLAM_Kinectv2.desktop  RGBDSLAM_RealSense.desktop  RGBDSLAM_RealSense_SR300.desktop  RTABMAP_Kinectv1.desktop  RTABMAP_Kinectv2.desktop  RTABMAP_RealSense.desktop  RTABMAP_RealSense2.desktop  RTABMAP_RealSense_SR300.desktop  RTABMAP_Two_kinects.desktop
slam_scripts/fuse_cameras/: fuse_from_bagfile.launch  fuse_two_kinects.launch
slam_scripts/fuse_cameras/pcl_fuse/: CMakeLists.txt  package.xml
slam_scripts/fuse_cameras/pcl_fuse/src/: depth_map.hpp  pcl_fuse.cpp
slam_scripts/infinitam/: infinitam_kinectv1.sh  infinitam_kinectv2.sh  infinitam_realsense.sh  infinitam_realsense2.sh  infinitam_realsense_sr300.sh  infinitam_two_kinectv1.sh  process_infinitam_output.py
slam_scripts/infinitam/ProcessPoints/src/: CMakeLists.txt  main.cpp  point_XYZRGBI.h
slam_scripts/multicam_calibration/: april_6x8.yaml  april_8x11.yaml  april_8x6.yaml  four_cam_kalibr  get_rotation_matrix.py  kalibr_call_syntax  matToEuler.py  pathdef.m  rotMatrixToVector.m  run_kalibr.sh  run_kalibr_d435.sh  three_cam_kalibr
slam_scripts/orbslam/: 002712263847.yaml  149272340747.yaml  d435.yaml  d435_v2.yaml  ros_rgbd.cc
slam_scripts/rgbdslam/: rgbdslam.launch  rgbdslam_kinectv1.launch  rgbdslam_kinectv1.sh  rgbdslam_kinectv2.launch  rgbdslam_realsense.sh  zr300_nodelet_rgbd.xml
slam_scripts/rtabmap/: camera_frames.launch  rtabmap_kinectv1.launch  rtabmap_kinectv1.sh  rtabmap_kinectv2.launch  rtabmap_kinectv2.sh  rtabmap_realsense.launch  rtabmap_realsense.sh  rtabmap_realsense2_playback.launch  rtabmap_realsense_sr300.sh  rtabmap_two_kinects.sh  sr300_nodelet_rgbd.xml  working_demo_two_kinects.launch  working_demo_two_realsense.launch  zr300_camera1_nodelet_rgbd.xml
slam_scripts/sync_example/: CMakeLists.txt  package.xml
slam_scripts/sync_example/four_cams/: sync_example.cpp
slam_scripts/sync_example/launch/: real_kinects.launch  sync_example.launch
slam_scripts/sync_example/three_cams/: sync_example.cpp
slam_scripts/sync_hardcode/: CMakeLists.txt  package.xml  sync_hardcode.cpp
slam_scripts/sync_hardcode/launch/: sync_hardcode.launch
super4pcs-script/: README.md
super4pcs-script/general/: get_pcl_error.sh  rmse_curve.py
super4pcs-script/registration/: inputs.txt  runInputs.sh  s4p-register.sh
super4pcs-script/testModels/: hippo1.pcd  hippo1.ply  hippo1.vtk  hippo2.pcd  lidar-14-1m-1-c.ply
trajectory_icp/: CMakeLists.txt  compare_traj.sh  main.cpp  process.py
(+64 files in other folders)
