<package format="2">
  <name>sync_example</name>
  <version>0.0.1</version>
  <description>
    Approximate time sync example.
  </description>
  <author>Thomas Denewiler</author>
  <maintainer email="tdenewiler@gmail.com">Thomas Denewiler</maintainer>
  <license>BSD</license>
  <url>https://github.com/tdenewiler/sync_example</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
